[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Botoes/SoundOff.png" type="Texture" id=1]
[ext_resource path="res://Assets/Botoes/SoundOn.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/SoundManagement.gd" type="Script" id=3]

[node name="SoundManagement" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="SoundOn" type="TextureButton" parent="."]
visible = false
anchor_right = 0.021
anchor_bottom = 0.037
margin_left = 1712.09
margin_top = 38.1407
margin_right = 1799.77
margin_bottom = 126.181
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundOff" type="TextureButton" parent="."]
visible = false
anchor_right = 0.021
anchor_bottom = 0.037
margin_left = 1712.09
margin_top = 38.1407
margin_right = 1799.77
margin_bottom = 126.181
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SoundOn" to="." method="_on_SoundOn_pressed"]
[connection signal="pressed" from="SoundOff" to="." method="_on_SoundOff_pressed"]
